--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ringOfFire": {
+    "ring-of-fire": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -63,10 +63,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "ringOfFire:build:production"
+              "buildTarget": "ring-of-fire:build:production"
             },
             "development": {
-              "buildTarget": "ringOfFire:build:development"
+              "buildTarget": "ring-of-fire:build:development"
             }
           },
           "defaultConfiguration": "development"
@@ -74,7 +74,7 @@
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "buildTarget": "ringOfFire:build"
+            "buildTarget": "ring-of-fire:build"
           }
         },
         "test": {
@@ -96,6 +96,23 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "version": 2
+          },
+          "configurations": {
+            "production": {
+              "buildTarget": "ring-of-fire:build:production",
+              "serveTarget": "ring-of-fire:serve:production"
+            },
+            "development": {
+              "buildTarget": "ring-of-fire:build:development",
+              "serveTarget": "ring-of-fire:serve:development"
+            }
+          },
+          "defaultConfiguration": "production"
         }
       }
     }
